fixed gap

--- a/src/app/components/admin-dashboard/admin-dashboard.component.css
+++ b/src/app/components/admin-dashboard/admin-dashboard.component.css
@@ -4,6 +4,24 @@
 
 #header{
   height: 10vh;
+  position: relative; /* Ensure the parent div is a positioned container */
+  /* height: 100%; */
+}
+
+#header > div{
+  /* position: absolute;
+    bottom: 0; */
+}
+
+#left-column{
+  /* background-color: #ffc2b9; */
+}
+
+#retro-logo{
+}
+#navigation{
+  padding-bottom: 0;
+  bottom: 0;
 }
 
 #navigation > div {
